fix Study button width on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ ul.nav-list {
 .study-button-container {
   position: fixed;
   bottom: 30px;
-  width: 100%;
+  width: 90%;
   box-sizing: border-box;
   display: flex;
   align-items: center;
